--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Resume</title>
 </head>
 <body>
-    <h1>Divyanshu Gupta</h1>
-    <h2>Divyanshu Gupta</h2>
+    <h2>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <u><b>RESUME</b></u></h2>
+    <hr>
     <h3>Divyanshu Gupta</h3>
-    <h4>Divyanshu Gupta</h4>
-    <h5>Divyanshu Gupta</h5>
-    <h6>Divyanshu Gupta</h6>
+    <h4>+91 8853928678</h4>
+    <h4>Gmail Id:- lyricalv15@gmail.com</h4><hr>
     <a href="https://github.com/Divyanshu6928" target="_blank">Github</a><br>
-    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a><hr>
+    <h2><u>Aim/Objective:-</u></h2>
+    <h4>&nbsp; &nbsp; &nbsp; I am very passionate about my work and looking for great upcoming oppurtunities in my life to get some real valued experience. </h4>
 </body>
 </html> 
