--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h4>+91 8853928678</h4>
     <h4>Gmail Id:- lyricalv15@gmail.com</h4><hr>
     <a href="https://github.com/Divyanshu6928" target="_blank">Github</a><br>
-    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a><hr>
+    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a><br>
+    <a href="mailto:lyricalv15@gmail.com" target="_blank">lyricalv15@gmail.com</a><hr>
     <h2><u>Aim/Objective:-</u></h2>
     <h4>&nbsp; &nbsp; &nbsp; I am very passionate about my work and looking for great upcoming oppurtunities in my life to get some real valued experience. </h4>
 </body>
