--- a/index.html
+++ b/index.html
@@ -4,17 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <link rel="shortcut icon" href="th (1).jpg" type="image/x-icon">
+    <style>
+        h2{
+            background-color: black;
+            color: white;
+        }
+        h3{
+            color: crimson;
+        }
+        th{
+            color: rgb(40, 138, 110);
+        }
+    </style>
 </head>
 <body>
-    <h2>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <u><b>RESUME</b></u></h2>
+    <h2 style="text-align: center;"><u><b> RESUME</b></u></h2>
     <hr>
-    <h3>Divyanshu Gupta</h3>
-    <h4>+91 8853928678</h4>
-    <h4>Gmail Id:- lyricalv15@gmail.com</h4><hr>
-    <a href="https://github.com/Divyanshu6928" target="_blank">Github</a><br>
-    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a><br>
-    <a href="mailto:lyricalv15@gmail.com" target="_blank">lyricalv15@gmail.com</a><hr>
-    <h2><u>Aim/Objective:-</u></h2>
+    <h4>Divyanshu Gupta</h4>
+    <h5>+91 8853928678</h5><hr>
+    <a href="mailto:lyricalv15@gmail.com" target="_blank">lyricalv15@gmail.com</a>
+    <span>||</span>
+    <a href="https://github.com/Divyanshu6928" target="_blank">Github</a>
+    <span>||</span>
+    <a href="https://www.linkedin.com/in/divyanshu-gupta-640872270/" target="_blank">LinkedIn</a>
+    <hr>
+    <h3><u>Aim/Objective:-</u></h3>
     <h4>&nbsp; &nbsp; &nbsp; I am very passionate about my work and looking for great upcoming oppurtunities in my life to get some real valued experience. </h4>
+    <h3><u>Educational Qualification:-</u></h3>
+    <table border="">
+        <tr>
+            <th>&nbsp;Class&nbsp;</th>
+            <th> &nbsp;School/College&nbsp;</th>
+            <th>&nbsp;Board&nbsp;</th>
+            <th>&nbsp;Passed Year&nbsp;</th>
+            <th>&nbsp;Percentage&nbsp;</th>
+        </tr>
+        <tr>
+            <td>&nbsp;10th&nbsp;</td>
+            <td>&nbsp;&nbsp;Little Flower School Mrj&nbsp;&nbsp;</td>
+            <td>&nbsp;ICSE</td>
+            <td>&nbsp;2020&nbsp;</td>
+            <td>&nbsp;83%&nbsp;</td>
+        </tr>
+        <tr>
+            <td>Class 12th</td>
+            <td>&nbsp;&nbsp;Bishop Academy Mrj&nbsp;</td>
+            <td>&nbsp;CBSE&nbsp;</td>
+            <td>&nbsp;2022&nbsp;</td>
+            <td>&nbsp;75%&nbsp;</td>
+        </tr>
+    </table>
+    <h3><u>Additional Qualification:-</u></h3>
+    <table border="">
+        <tr>
+            <th>&nbsp;Institute&nbsp;</th>
+            <th>&nbsp;Course&nbsp;</th>
+            <th>&nbsp;Session&nbsp;</th>
+        </tr>
+        <tr>
+            
+            <td>&nbsp;Indian Institue Of Technology Madras&nbsp;</td>
+            <td>&nbsp; BSc DS & AI&nbsp;</td>
+            <td>&nbsp;2023-2027&nbsp;</td>
+            
+        </tr>
+        <tr>
+            <td>&nbsp;PW Institute Of Innovation Bangalore&nbsp;</td>
+            <td>&nbsp;Certification Course in DS & AI&nbsp;</td>
+            <td>&nbsp;2023-2027&nbsp;</td>
+        </tr>
+    </table>
+    <h3><u>Skills:-</u></h3>
+    <ul>
+        <li>Excel</li>
+        <li>Python</li>
+        <li>Canva Designing</li>
+        <li>C Language</li>
+    </ul>
+    <h3><u>Language Known:-</u></h3>
+    <span>
+        <ul>
+        <li>Hindi</li>
+        <li>English</li>
+    </ul>
+    </span>
 </body>
 </html> 
