--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
         th{
             color: rgb(40, 138, 110);
         }
+        img{
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
     <h2 style="text-align: center;"><u><b> RESUME</b></u></h2>
     <hr>
-    <h4>Divyanshu Gupta</h4>
+    <img src="dg.jpg" alt="dg" height="80px" ><br><br>
+    <span><b>Divyanshu Gupta</b></span>
     <h5>+91 8853928678</h5><hr>
     <a href="mailto:lyricalv15@gmail.com" target="_blank">lyricalv15@gmail.com</a>
     <span>||</span>
@@ -82,7 +86,7 @@
         <li>Canva Designing</li>
         <li>C Language</li>
     </ul>
-    <h3><u>Language Known:-</u></h3>
+    <h3><u>Language known:-</u></h3>
     <span>
         <ul>
         <li>Hindi</li>
