--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         }
         img{
             border-radius: 50%;
+            padding: 0%;
+            margin: 10px;
         }
     </style>
 </head>
 <body>
     <h2 style="text-align: center;"><u><b> RESUME</b></u></h2>
     <hr>
-    <img src="dg.jpg" alt="dg" height="80px" ><br><br>
+    <img src="dg.jpg" alt="dg" height="100px" ><br><br>
     <span><b>Divyanshu Gupta</b></span>
     <h5>+91 8853928678</h5><hr>
     <a href="mailto:lyricalv15@gmail.com" target="_blank">lyricalv15@gmail.com</a>
